--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
-spring.application.name=payments
+#SPRING
+spring.application.name=${rootProject.name}
+spring.profiles.active=\${ENV}
+spring.main.banner-mode=off
+#JACKSON
+jackson.default-property-inclusion=non_null
+jackson.date-format=yyyy-MM-dd'T'HH:mm:ssz
+jackson.time-zone=UTC
+#LOGGING
+logging.level.org.apache.hc.client5.http=DEBUG
+logging.level.ch.qos=ERROR
+#CLIENTS
+config.clients.connection-timeout-seconds=30
+#CIRCUIT-BREAKER
+resilience4j.circuitbreaker.configs.default.failureRateThreshold=50
+resilience4j.circuitbreaker.configs.default.minimumNumberOfCalls=2
+resilience4j.circuitbreaker.configs.default.registerHealthIndicator=true
+resilience4j.circuitbreaker.configs.default.slidingWindowSize=5
+resilience4j.circuitbreaker.configs.default.slidingWindowType=count_based
+
+
