--- a/build.gradle
+++ b/build.gradle
@@ -43,24 +43,30 @@ dependencies {
 
 	//LOGBACK
 	implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '8.0'
-	testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.5.8'
 	implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.5.8'
 
 	//SPRING
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'io.micrometer:micrometer-tracing-bridge-brave'
 	implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
 
-
+	//DB
+	runtimeOnly 'com.h2database:h2'
+	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	//HTTP
 	implementation 'org.apache.httpcomponents.client5:httpclient5'
 
 	//SWAGGER
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
+
+	//UTILS
+	implementation 'org.mapstruct:mapstruct:1.6.2'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.2'
+
 
 	//TEST
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
