--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,25 @@
 spring.application.name=${rootProject.name}
 spring.profiles.active=\${ENV}
 spring.main.banner-mode=off
+management.endpoint.show-components=always
+management.endpoint.show-details=always
+management.endpoints.web.exposure.include=*
+#DB
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
 #JACKSON
-jackson.default-property-inclusion=non_null
-jackson.date-format=yyyy-MM-dd'T'HH:mm:ssz
-jackson.time-zone=UTC
+spring.jackson.default-property-inclusion=non_null
+spring.jackson.date-format=yyyy-MM-dd'T'HH:mm:ss.SSSZ
+spring.jackson.time-zone=UTC
+spring.jackson.serialization.write-dates-as-timestamps=false
 #LOGGING
-logging.level.org.apache.hc.client5.http=DEBUG
-logging.level.ch.qos=ERROR
+logging.pattern.console=%red(%d{ISO8601}) %highlight(%-5level) %green(\${spring.application.name}) [%blue(%X{traceId:-},%X{spanId:-})]%yellow(%C.%M:%L): %msg%n%throwable
+logging.pattern.correlation=[\${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+logging.level.org.apache.hc.client5.http.wire=DEBUG
+management.tracing.sampling.probability=1.0
 #CLIENTS
 config.clients.connection-timeout-seconds=30
 #CIRCUIT-BREAKER
@@ -17,5 +29,6 @@ resilience4j.circuitbreaker.configs.default.minimumNumberOfCalls=2
 resilience4j.circuitbreaker.configs.default.registerHealthIndicator=true
 resilience4j.circuitbreaker.configs.default.slidingWindowSize=5
 resilience4j.circuitbreaker.configs.default.slidingWindowType=count_based
-
-
+#FABRICK
+fabrick.url=https://sandbox.platfr.io
+fabrick.auth-schema=S2S
