--- a/build.gradle
+++ b/build.gradle
@@ -53,9 +53,12 @@ dependencies {
 	implementation 'io.micrometer:micrometer-tracing-bridge-brave'
 	implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
 
+	//CACHING
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
+	implementation 'com.github.ben-manes.caffeine:caffeine'
+
 	//DB
 	runtimeOnly 'com.h2database:h2'
-	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	//HTTP
 	implementation 'org.apache.httpcomponents.client5:httpclient5'
@@ -67,7 +70,6 @@ dependencies {
 	implementation 'org.mapstruct:mapstruct:1.6.2'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.2'
 
-
 	//TEST
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-stub-runner'
@@ -77,6 +79,7 @@ dependencies {
 	testImplementation 'com.tngtech.archunit:archunit-junit5:1.3.0'
 	testImplementation 'com.maciejwalkowiak.spring:wiremock-spring-boot:2.1.2'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	testImplementation 'com.h2database:h2'
 
 
 }
