--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,17 +5,20 @@ spring.main.banner-mode=off
 management.endpoint.show-components=always
 management.endpoint.show-details=always
 management.endpoints.web.exposure.include=*
+server.servlet.context-path=/api
 #DB
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
+#CACHE
+spring.cache.type=caffeine
+caffeine.spec=maximumSize=100,expireAfterAccess=10m
 #JACKSON
 spring.jackson.default-property-inclusion=non_null
 spring.jackson.date-format=yyyy-MM-dd'T'HH:mm:ss.SSSZ
 spring.jackson.time-zone=UTC
-spring.jackson.serialization.write-dates-as-timestamps=false
 #LOGGING
 logging.pattern.console=%red(%d{ISO8601}) %highlight(%-5level) %green(\${spring.application.name}) [%blue(%X{traceId:-},%X{spanId:-})]%yellow(%C.%M:%L): %msg%n%throwable
 logging.pattern.correlation=[\${spring.application.name:},%X{traceId:-},%X{spanId:-}]
@@ -25,10 +28,16 @@ management.tracing.sampling.probability=1.0
 config.clients.connection-timeout-seconds=30
 #CIRCUIT-BREAKER
 resilience4j.circuitbreaker.configs.default.failureRateThreshold=50
-resilience4j.circuitbreaker.configs.default.minimumNumberOfCalls=2
+resilience4j.circuitbreaker.configs.default.minimumNumberOfCalls=8
 resilience4j.circuitbreaker.configs.default.registerHealthIndicator=true
 resilience4j.circuitbreaker.configs.default.slidingWindowSize=5
+resilience4j.circuitbreaker.configs.default.waitDurationInOpenState=10000
 resilience4j.circuitbreaker.configs.default.slidingWindowType=count_based
+resilience4j.circuitbreaker.configs.default.permittedNumberOfCallsInHalfOpenState=3
+#RETRY
+resilience4j.retry.instances.default.maxAttempts=3
+resilience4j.retry.instances.default.waitDuration=1000ms
+resilience4j.retry.instances.default.eventConsumerBufferSize=10
 #FABRICK
 fabrick.url=https://sandbox.platfr.io
 fabrick.auth-schema=S2S
